Fixed dashboard listing column spacing

--- a/src/components/userDashboard/userParts/updatePartStatus.css
+++ b/src/components/userDashboard/userParts/updatePartStatus.css
@@ -15,10 +15,11 @@
 }*/
 
 .statusUpdateDropdown select {
-   display:  inline-block;
-   font-size: 1.3rem;
+   /*display:  inline-block;*/
+   font-size: 1rem;
    padding: 0.2rem;
    position: absolute;
+   right: 0.5rem;
 
 }
 /* .confirmButton, .cancelButton{
